syntax = "proto3";
package docs;

option go_package = "streaming/docs";

service Docs {
    // sending stream with most fields empty
    rpc SendDocFull(stream DocStreamRequest) returns (SendDocResponse) {}
    rpc SendDocVariadic(stream DocOrRowRequest) returns (SendDocResponse) {}
}

message DocOrRowRequest {
    oneof msg {
        DocStreamRequest doc = 1;
        Row row = 2;
    }
}

message DocStreamRequest {
    repeated Row rows = 1;
    int64 supply_id = 2;
    int64 seller_id = 3;
    string shelf_life = 4;
    string idempotency_token = 5;
    string address = 6;
    string tin = 7;
    bool flag = 8;
}

message Row {
    string name = 1;
    int64 sku = 2;
    string char = 3;
    int64 quality = 4;
    string add_name = 5;
    string add_code = 6;
    double count = 7;
    double price = 8;
    double total = 9;
    string bar = 10;
}

message SendDocResponse {
    int64 totar_rows_count = 1;
}
